--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.h2.console.enabled=true
 
 #Datasource Config
 
-spring.datasource.url=jdbc:h2:file:c://Tools/Database/mydb4
+spring.datasource.url=jdbc:h2:file:c://Tools/Database/bookingapp
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -15,3 +15,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+resource.uploads =D:/Code/My Projects/BC_fr_bk/BC_bk/src/main/resources/uploads
