User Authentication Done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,14 @@
 server.port=8080
 
-#H2 Config
-spring.h2.console.path=/h2-console
-spring.h2.console.enabled=true
+spring.application.name=BookingApp
 
-#Datasource Config
+spring.datasource.url=jdbc:postgresql://localhost:5432/booking
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:h2:file:c://Tools/Database/bookingapp
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-resource.uploads =D:/Code/My Projects/BC_fr_bk/BC_bk/src/main/resources/uploads/
+resource.uploads=D:/uploads/HotelImage/
